# k8s-labs-user-service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  demo.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
api_collection/: health.http  users.http
app/: config.py  dependencies.py  exceptions.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  users.py
app/core/: exception_handlers.py  logging.py  middleware.py
app/db/: session.py
app/db/models/: user.py
app/schemas/: user.py
k8s/: app-deployment.yaml  app-service.yaml  configmap.yaml  db-deployment.yaml  db-init-configmap.yaml  db-pvc.yaml  db-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml
locust/: locust.conf  locustfile.py
migrations/: env.py
migrations/versions/: 20250616_0001_create_users_table.py
tests/: conftest.py  test_health.py
tests/users/: test_users_crud.py
