[project]
name = "nagp-user-service"
version = "0.1.0"
description = "User microservice — FastAPI + PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "python-ulid>=3.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "greenlet>=3.1.1",
    "mypy>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "testcontainers[postgres]>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
